fix: byline, article, flex spacing and responsiveness

--- a/assets/css/article.pcss
+++ b/assets/css/article.pcss
@@ -1,12 +1,12 @@
 .article {
   padding-block: 2rem;
-  
+
   &__footer {
     font-size: var(--skeleton-size-text-small);
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 0.5rem;
-    padding-block: 1rem;
+    padding: 0.5rem 1rem;
   }
 }
