--- a/assets/css/byline.css
+++ b/assets/css/byline.css
@@ -2,6 +2,6 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 0.25rem;
+  gap: 0.5rem;
   margin-block: 2rem;
 }
