--- a/assets/css/flexbox.pcss
+++ b/assets/css/flexbox.pcss
@@ -104,7 +104,9 @@
 
 @container (max-width: 994px) {
   
-  .col--9 {
+  .col--9,
+  .col--8,
+  .col--4 {
     flex: 0 0 100%;
     max-inline-size: 100%;
   }
@@ -115,6 +117,7 @@
   .col,
   .col--9,
   .col--6,
+  .col--4,
   .col--3 {
     flex: 0 0 100%;
     max-inline-size: 100%;
